salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>