salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>The manufacturing batch number.</description>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>