salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration date for this batch.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>