salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/fields/Mass__c.field-meta.xml
<CustomField>
    <fullName>Mass__c</fullName>
    <description>The numerical mass amount per unit (e.g. 5, 10, 50).</description>
    <label>Mass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>