salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/fields/Mass_Unit__c.field-meta.xml
<CustomField>
    <fullName>Mass_Unit__c</fullName>
    <description>Unit of measure for the mass (e.g., mg, iu).</description>
    <label>Mass Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>