salesforce-org/org-backup/force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Mass__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>